--- a/DoAn_CuaHangLinhKien/frmQuanLy.resx
+++ b/DoAn_CuaHangLinhKien/frmQuanLy.resx
@@ -128,7 +128,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAEZTeXN0ZW0uV2luZG93cy5Gb3JtcywgQ3VsdHVyZT1uZXV0cmFs
         LCBQdWJsaWNLZXlUb2tlbj1iNzdhNWM1NjE5MzRlMDg5BQEAAAAmU3lzdGVtLldpbmRvd3MuRm9ybXMu
         SW1hZ2VMaXN0U3RyZWFtZXIBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAA2C8AAAJNU0Z0AUkBTAIBAQgB
-        AAEoAQMBKAEDASABAAEgAQAD/wEAASEBAAj/AUIBTQE2BwABNgMAASgDAAGAAwABYAMAAQEBAAEgBgAB
+        AAGAAQQBgAEEASABAAEgAQAD/wEAASEBAAj/AUIBTQE2BwABNgMAASgDAAGAAwABYAMAAQEBAAEgBgAB
         wP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/
         AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/
         AP8A/wD/AP8AngADHQEpAl0BYgHcAkcBlAH/AkcBlAH/AkcBlAH/AkcBlAH/AkcBSAGDbAADJQE2A2IB
@@ -358,7 +358,7 @@
   <metadata name="splitContainer8.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="openFileDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+  <metadata name="ofdSelectProductImage.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
   <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
