--- a/GUI/frmQuanLy.resx
+++ b/GUI/frmQuanLy.resx
@@ -149,6 +149,57 @@
         lU3b9lbtnhwQ1KYKg9in3694kwYCb6mNRtdr81+CZf0E0a2Fxwrhps4AAAAASUVORK5CYII=
 </value>
   </data>
+  <metadata name="OrderID.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="OrderCustomer.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="OrderCustomerPhone.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="OrderStatus.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="OrderTotal.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="OrderDate.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="OrderStaff.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="splitContainer5.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <data name="btnAddOrder.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DAAACwwBP0AiyAAAAsJJREFUWEftV7ty00AUdcWj5dHRQA90IVQpPNqVmXTgivBI+AcmwyPODxgSKwHC
+        BCgJ+RYIfAGEIqEFmgwNcM767Eq2ZNmyYdLkzNzRzrln772rfWhVO8I4SOr100mjcXEtjq91oqjBNjm5
+        /w+e1esXEmuXYR/XrP1TaMbswFrUqtvkWI3js0iaIPCvwqRF1tV22FdhxgMSX02M+ZYNDu47ErxF+xHs
+        roztLfA/8Ey1xuyjiGmFq4YkjptIdpAJ9gUJbraazWOS5EBfJ47noN0N/Rgjim5IMhrcyDPJkfg5RnJc
+        7qF4MzNzAv1f9hVxRe5yuDnPvPaOtfflqgwUvhiKwHRszM6ekWswUG0SOln7SvTYQOIXPh4KWhFdDG4f
+        iPxq/1z22uE759YJjG3RObjp8GsCsXFunJcrD4x42VfLxSS6EEzstWyLLsS6MbeD1pgl0XlA8MmJsNXK
+        VjtRpQC+SYy+u0VxWInuBY9SHxC2JXogqhRAIPG201r7u23MKdEpOsZcDgGNeSg6IDvnLrkxba9nO+sr
+        WhPQ8bBy+vU4viQ6BT8qXoAC5kUHuKTyDzNq1S0ARS4EjTGx6BQkM4IF0QGTFoBFfS/4rbWiUxz6FBz6
+        IiQg2nEiY35y64guRJUCGIsxVcB70XmggJYPCrsluhBVCkii6E7Qlh1EPCZRhDuKIdzlMSpXDtk1UTTn
+        Hu1m8yTifXUFDDuKCSRe9dXCXoseG4ix4ePh9T8RPRgYDT/H+74Tql6UqzLQ/0GIY+3eyBdXFDGNatPb
+        EC4XZdPRD2pR+Gam/wG2+ZTco4HXqJ4isCb4VeOKliQH+rTgunOu5Oh7XZJq4DWqZzpo+KqBe4f2Yzzn
+        ZUvgt/F0Wy1je5VH3g9eoxB8BVb1Wv70n/6scPtopB9yCb3BR83QrTYpeJTyd4xfUBrbA4/XI5SiVvsL
+        kfSczgtDmPkAAAAASUVORK5CYII=
+</value>
+  </data>
+  <metadata name="sdt.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="cusName.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="cusAddress.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <data name="btnAddCustomer.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
@@ -187,30 +238,6 @@
         1/lu98Bx/gBN1VCIz5/T9QAAAABJRU5ErkJggg==
 </value>
   </data>
-  <metadata name="OrderID.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="OrderCustomer.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="OrderCustomerPhone.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="OrderStatus.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="OrderTotal.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="OrderDate.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="OrderStaff.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="splitContainer5.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
   <data name="btnSearchOrderCancel.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
@@ -248,24 +275,6 @@
         lU3b9lbtnhwQ1KYKg9in3694kwYCb6mNRtdr81+CZf0E0a2Fxwrhps4AAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="btnAddOrder.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DAAACwwBP0AiyAAAAsJJREFUWEftV7ty00AUdcWj5dHRQA90IVQpPNqVmXTgivBI+AcmwyPODxgSKwHC
-        BCgJ+RYIfAGEIqEFmgwNcM767Eq2ZNmyYdLkzNzRzrln772rfWhVO8I4SOr100mjcXEtjq91oqjBNjm5
-        /w+e1esXEmuXYR/XrP1TaMbswFrUqtvkWI3js0iaIPCvwqRF1tV22FdhxgMSX02M+ZYNDu47ErxF+xHs
-        roztLfA/8Ey1xuyjiGmFq4YkjptIdpAJ9gUJbraazWOS5EBfJ47noN0N/Rgjim5IMhrcyDPJkfg5RnJc
-        7qF4MzNzAv1f9hVxRe5yuDnPvPaOtfflqgwUvhiKwHRszM6ekWswUG0SOln7SvTYQOIXPh4KWhFdDG4f
-        iPxq/1z22uE759YJjG3RObjp8GsCsXFunJcrD4x42VfLxSS6EEzstWyLLsS6MbeD1pgl0XlA8MmJsNXK
-        VjtRpQC+SYy+u0VxWInuBY9SHxC2JXogqhRAIPG201r7u23MKdEpOsZcDgGNeSg6IDvnLrkxba9nO+sr
-        WhPQ8bBy+vU4viQ6BT8qXoAC5kUHuKTyDzNq1S0ARS4EjTGx6BQkM4IF0QGTFoBFfS/4rbWiUxz6FBz6
-        IiQg2nEiY35y64guRJUCGIsxVcB70XmggJYPCrsluhBVCkii6E7Qlh1EPCZRhDuKIdzlMSpXDtk1UTTn
-        Hu1m8yTifXUFDDuKCSRe9dXCXoseG4ix4ePh9T8RPRgYDT/H+74Tql6UqzLQ/0GIY+3eyBdXFDGNatPb
-        EC4XZdPRD2pR+Gam/wG2+ZTco4HXqJ4isCb4VeOKliQH+rTgunOu5Oh7XZJq4DWqZzpo+KqBe4f2Yzzn
-        ZUvgt/F0Wy1je5VH3g9eoxB8BVb1Wv70n/6scPtopB9yCb3BR83QrTYpeJTyd4xfUBrbA4/XI5SiVvsL
-        kfSczgtDmPkAAAAASUVORK5CYII=
-</value>
-  </data>
   <data name="btnSearchProduct.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
@@ -292,6 +301,12 @@
     <value>True</value>
   </metadata>
   <metadata name="splitContainer15.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="ManuID.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="ManuName.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
   <data name="btnSearchManufacturer.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -358,6 +373,12 @@
     <value>True</value>
   </metadata>
   <metadata name="splitContainer18.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="CateID.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="CateName.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
   <data name="btnSearchCate.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -435,6 +456,21 @@
   <metadata name="splitContainer21.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="Column10.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Column12.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Column11.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Column13.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Column14.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <data name="btnSearchGRNCancel.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
@@ -500,6 +536,33 @@
     <value>True</value>
   </metadata>
   <metadata name="splitContainer24.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Column1.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Column5.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Column2.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Column9.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Column3.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Column4.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Column6.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Column7.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Column8.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
   <data name="btnSearchStaff.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -572,6 +635,18 @@
     <value>True</value>
   </metadata>
   <metadata name="splitContainer30.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="AccountID.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="passWord.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="accountType.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="accountStaff.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
   <data name="btnSearchAccount.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
