--- a/GUI/frmStatistic.resx
+++ b/GUI/frmStatistic.resx
@@ -129,4 +129,73 @@
   <metadata name="colDate.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAHh4AAAEAIACwDgAAFgAAACgAAAAeAAAAPAAAAAEAIAAAAAAAEA4AABMLAAATCwAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAA/AAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAAMAAAAAAAAAAAAA
+        AAAAAAAAAAAA/AAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAAMAAAAAAAAAAAAA
+        AAAAAAAAAAAA/AAAAP8AAAADAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAA/AAAAP8AAAADAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAA/AAAAP8AAAADAAAAAAAAAPwAAAD/AAAA/wAAAP8AAAD/AAAAAwAAAAAAAAD8AAAA/wAA
+        AP8AAAD/AAAA/wAAAAMAAAAAAAAA/AAAAP8AAAD/AAAA/wAAAP8AAAADAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAA/AAAAP8AAAADAAAAAAAAAPwAAAD/AAAA/wAAAP8AAAD/AAAAAwAAAAAAAAD8AAAA/wAA
+        AP8AAAD/AAAA/wAAAAMAAAAAAAAA/AAAAP8AAAD/AAAA/wAAAP8AAAADAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAA/AAAAP8AAAADAAAAAAAAAPwAAAD/AAAA/wAAAP8AAAD/AAAAAwAAAAAAAAD8AAAA/wAA
+        AP8AAAD/AAAA/wAAAAMAAAAAAAAA/AAAAP8AAAD/AAAA/wAAAP8AAAADAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAA/AAAAP8AAAADAAAAAAAAAPwAAAD/AAAA/wAAAP8AAAD/AAAAAwAAAAAAAAD8AAAA/wAA
+        AP8AAAD/AAAA/wAAAAMAAAAAAAAA/AAAAP8AAAD/AAAA/wAAAP8AAAADAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAA/AAAAP8AAAADAAAAAAAAAPwAAAD/AAAA/wAAAP8AAAD/AAAAAwAAAAAAAAD8AAAA/wAA
+        AP8AAAD/AAAA/wAAAAMAAAAAAAAA/AAAAP8AAAD/AAAA/wAAAP8AAAADAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAA/AAAAP8AAAADAAAAAAAAAPwAAAD/AAAA/wAAAP8AAAD/AAAAAwAAAAAAAAD8AAAA/wAA
+        AP8AAAD/AAAA/wAAAAMAAAAAAAAA/AAAAP8AAAD/AAAA/wAAAP8AAAADAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAA/AAAAP8AAAADAAAAAAAAAPwAAAD/AAAA/wAAAP8AAAD/AAAAAwAAAAAAAAD8AAAA/wAA
+        AP8AAAD/AAAA/wAAAAMAAAAAAAAA/AAAAP8AAAD/AAAA/wAAAP8AAAADAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAA/AAAAP8AAAADAAAAAAAAAPwAAAD/AAAA/wAAAP8AAAD/AAAAAwAAAAAAAAD8AAAA/wAA
+        AP8AAAD/AAAA/wAAAAMAAAAAAAAA/AAAAP8AAAD/AAAA/wAAAP8AAAADAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAA/AAAAP8AAAADAAAAAAAAAPwAAAD/AAAA/wAAAP8AAAD/AAAAAwAAAAAAAAD8AAAA/wAA
+        AP8AAAD/AAAA/wAAAAMAAAAAAAAA/AAAAP8AAAD/AAAA/wAAAP8AAAADAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAA/AAAAP8AAAADAAAAAAAAAPwAAAD/AAAA/wAAAP8AAAD/AAAAAwAAAAAAAAD8AAAA/wAA
+        AP8AAAD/AAAA/wAAAAMAAAAAAAAA/AAAAP8AAAD/AAAA/wAAAP8AAAADAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAA/AAAAP8AAAADAAAAAAAAAPwAAAD/AAAA/wAAAP8AAAD/AAAAAwAAAAAAAAD8AAAA/wAA
+        AP8AAAD/AAAA/wAAAAMAAAAAAAAA/AAAAP8AAAD/AAAA/wAAAP8AAAADAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAA/AAAAP8AAAADAAAAAAAAAMQAAAD/AAAA/wAAAP8AAADIAAAAAAAAAAAAAAD8AAAA/wAA
+        AP8AAAD/AAAA/wAAAAMAAAAAAAAA/AAAAP8AAAD/AAAA/wAAAP8AAAADAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAA/AAAAP8AAAADAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD8AAAA/wAA
+        AP8AAAD/AAAA/wAAAAMAAAAAAAAA/AAAAP8AAAD/AAAA/wAAAP8AAAADAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAA/AAAAP8AAAADAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD8AAAA/wAA
+        AP8AAAD/AAAA/wAAAAMAAAAAAAAA/AAAAP8AAAD/AAAA/wAAAP8AAAADAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAA/AAAAP8AAAADAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD8AAAA/wAA
+        AP8AAAD/AAAA/wAAAAMAAAAAAAAA/AAAAP8AAAD/AAAA/wAAAP8AAAADAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAA/AAAAP8AAAADAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD8AAAA/wAA
+        AP8AAAD/AAAA/wAAAAMAAAAAAAAAxAAAAP8AAAD/AAAA/wAAAMgAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD8AAAA/wAA
+        AP8AAAD/AAAA/wAAAAMAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADEAAAA/wAA
+        AP8AAAD/AAAAyAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAD////8/////P////yAAAAcgAAAHI////yP///8iBAgfIgQIHyIECB8iBAgfIgQIHyIECB8iBAgfIgQ
+        IHyIECB8iBAgfIgQIHyIMCB8j/AgfI/wIHyP8CB8j/Ag/P/wP/z/8H/8/////P////z////8/////P//
+        //w=
+</value>
+  </data>
 </root>
